update auto/man created ini files (mame0267)

--- a/00-databases-00/sorted_info_creation/0XXX/90º.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/90º.ini
@@ -904,7 +904,7 @@ eggor
 eggs
 eightfrc
 elecyoyo
-elecyoyo2
+elecyoyoa
 enigma2
 enigma2a
 enigma2b
@@ -1576,7 +1576,7 @@ ladybugg
 ladyfrog
 ladykill
 ladymstr
-ladymstr2
+ladymstra
 lagirl
 lagunar
 laser
@@ -1836,6 +1836,8 @@ mspacmanbi
 mspacmanblt
 mspacmanblt2
 mspacmancr
+mspacmane
+mspacmane2
 mspacmanhnc
 mspacmanlai
 mspacmat
@@ -1978,6 +1980,7 @@ pacmania
 pacmaniaj
 pacmaniao
 pacmanjpm
+pacmanmr
 pacmanpe
 pacmanso
 pacmansp
@@ -2099,6 +2102,7 @@ pleiadbl
 pleiadce
 pleiads
 pleiadsb2
+pleiadsgmp
 pleiadsi
 pleiadsia
 pleiadsn
@@ -2348,7 +2352,7 @@ rfjett
 rfjetu
 ridleofp
 ringfgt
-ringfgt2
+ringfgta
 ringking
 ringking2
 ringking3
@@ -2996,7 +3000,7 @@ trvwz4va
 trvwzv
 tryout
 tsamurai
-tsamurai2
+tsamuraia
 tsamuraih
 tst_galx
 ttfitter
