--- a/00-databases-00/sorted_info_creation/0XXX/good.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/good.ini
@@ -236,6 +236,7 @@ aerofgtb
 aerofgtc
 aerofgts
 aerofgtst
+aerolitol
 aerolitos
 aes
 afbm7800
@@ -1979,6 +1980,7 @@ chleague
 chleagul
 chleagxa
 chleagxb
+chloe
 chmate
 chmpnum
 chmpnuma
@@ -3170,6 +3172,7 @@ dokidoki
 dokyusei
 dokyusp
 dolmen
+dolmenk
 dolphntra
 dolphntrb
 dolphntrce
@@ -3482,7 +3485,7 @@ electron64
 electronsp
 electront
 elecyoyo
-elecyoyo2
+elecyoyoa
 elekscmp
 elektor
 elephfam
@@ -3897,6 +3900,7 @@ feasbua
 feasgla
 feasglaa
 feasglab
+feasx
 feldo
 feleg
 felega
@@ -4890,6 +4894,7 @@ gradiusb
 grainbow
 grainbowk
 grally
+grand_l1
 grand_l3
 grand_l4
 granits
@@ -5044,6 +5049,7 @@ gtmr
 gtmr2
 gtmr2a
 gtmr2u
+gtmr2ua
 gtmra
 gtmrb
 gtmre
@@ -5087,6 +5093,7 @@ gtsers3
 gtsers4
 gtsers5
 gtsers7
+gtsers7a
 gtsers8
 gtsers8a
 gtsers9
@@ -5143,6 +5150,7 @@ gunforceu
 gunfront
 gunfrontj
 gunhohki
+gunkids
 gunlock
 gunlocko
 gunmast
@@ -5199,6 +5207,7 @@ h2hsoccerc
 h8
 h88
 h89
+h89_mms
 h89_sigmasoft
 hachamf
 hachamfa
@@ -5540,6 +5549,7 @@ hp85
 hp86b
 hp86b_001
 hp86b_004
+hp9816a
 hp9825a
 hp9825b
 hp9825t
@@ -6152,6 +6162,7 @@ jetwavej
 jgakuen
 jgakuen1
 jigkmgri
+jigkmgria
 jin
 jingbell
 jingbella
@@ -6707,8 +6718,8 @@ kovsh103
 kozure
 kr03
 kram
-kram2
-kram3
+krama
+krame
 kramermc
 krokha
 kroozr
@@ -6778,7 +6789,7 @@ ladylinrd
 ladylinre
 ladymakr
 ladymstr
-ladymstr2
+ladymstra
 lafootb
 lagirl
 lagunar
@@ -6984,13 +6995,13 @@ livequiz
 lizwiz
 lk3000
 lkage
+lkagea
 lkageb
-lkageb2
-lkageb3
-lkageb4
+lkagebl1
+lkagebl2
+lkagebl3
+lkagebl4
 lkagem
-lkageo
-lkageo2
 llander
 llander1
 llandert
@@ -7062,7 +7073,9 @@ lresortp
 lsasquad
 ltcasin2
 ltcasin2a
+ltcasin2b
 ltcasino
+ltcasinoa
 ltmpbp
 ltmpm
 ltswords
@@ -7412,6 +7425,7 @@ mastmind
 match98
 matchit
 matchit2
+matchitb
 matchme
 matchnum
 mathmagi
@@ -8269,6 +8283,8 @@ mspacmanbi
 mspacmanblt
 mspacmanblt2
 mspacmancr
+mspacmane
+mspacmane2
 mspacmanhnc
 mspacmanlai
 mspacmat
@@ -8922,7 +8938,7 @@ othunderj
 othunderjsc
 othundero
 othunderu
-othunderuo
+othunderua
 otonano
 otwalls
 ougonhaib1
@@ -8998,6 +9014,7 @@ pacmania
 pacmaniaj
 pacmaniao
 pacmanjpm
+pacmanmr
 pacmanpe
 pacmanso
 pacmansp
@@ -10120,6 +10137,7 @@ pleiadbl
 pleiadce
 pleiads
 pleiadsb2
+pleiadsgmp
 pleiadsi
 pleiadsia
 pleiadsn
@@ -10151,6 +10169,7 @@ pnickj
 pnkpnthr
 pnyaa
 pnyaaa
+pockchv2
 pocketbk
 pocketbk2
 pocketrc
@@ -10378,6 +10397,9 @@ primob64
 primrage
 primrage20
 primrageo
+princ
+princnt
+princnt3
 prisma
 prmrsocr
 prmrsocrj
@@ -11060,6 +11082,7 @@ reelpwr
 reelquak
 reflexcrd
 regence
+regency
 regulus
 reguluso
 regulusu
@@ -11152,7 +11175,7 @@ ringdestb
 ringdesth
 ringdstd
 ringfgt
-ringfgt2
+ringfgta
 ringking
 ringking2
 ringking3
@@ -11515,6 +11538,7 @@ saiyukip
 saklove
 salamand
 salamandj
+salamandt
 salarymc
 salmndr2
 salmndr2a
@@ -12176,6 +12200,7 @@ shinygld
 shippumd
 shisen
 shisen2
+shisena
 shmc1200
 shngmtkb
 shocking
@@ -12505,6 +12530,7 @@ snwrite
 socbrawl
 socbrawlh
 soccer
+soccer10
 soccernw
 soccerss
 soccerssa
@@ -13445,6 +13471,8 @@ tascr30a
 tascr30b
 tascr30g
 tatacot
+tatrain
+tatraina
 tattack
 tattass
 tattassa
@@ -13465,6 +13493,7 @@ tazzmang2
 tbatfor
 tbatman
 tbatmana
+tbblue
 tbbympt3
 tbeastw2
 tblkkuzu
@@ -14228,7 +14257,7 @@ ts2ja
 ts2u
 ts2ua
 tsamurai
-tsamurai2
+tsamuraia
 tsamuraih
 tsconf
 tsddragon
@@ -15369,6 +15398,7 @@ zingzip
 zintrckb
 zipzap
 zipzapa
+zircon2
 znpwfv
 znpwfvt
 zoar
