--- a/00-databases-00/sorted_info_creation/0XXX/lightgun.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/lightgun.ini
@@ -498,6 +498,7 @@ pet64
 pex0006k
 pex0013k
 pex0013ka
+pickytlk
 pico
 picoj
 picou
@@ -513,6 +514,7 @@ policetr13
 policetr13a
 policetr13b
 ppsatan
+princ
 pro128
 psion5mx
 ptblank
