--- a/00-databases-00/sorted_info_creation/0XXX/no_media.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/no_media.ini
@@ -596,6 +596,7 @@ aerofgtb
 aerofgtc
 aerofgts
 aerofgtst
+aerolitol
 aerolitos
 afbm7800
 afighter
@@ -905,6 +906,7 @@ anithunto2
 anithuntv1
 anmlbskt
 anmlbskta
+anoworld
 anpanman
 anpanman2
 anpanman2a
@@ -1958,6 +1960,7 @@ bk_f4
 bk_l2
 bk_l3
 bk_l4
+bkarast
 bkid218
 bking
 bking2
@@ -3100,6 +3103,7 @@ cmast91
 cmast92
 cmast92a
 cmast97
+cmast97i
 cmast99
 cmast99b
 cmaster
@@ -3140,6 +3144,8 @@ cmtetriskr
 cmtonig
 cmv4
 cmv4a
+cmv4zg
+cmv4zga
 cmv801
 cmwm
 cnbaskb
@@ -3706,6 +3712,7 @@ cupsocsb5
 curvebal
 cutefght
 cutieq
+cuttherope
 cv_10
 cv_11
 cv_13
@@ -4469,6 +4476,7 @@ dokyusei
 dokyusp
 dollyptn
 dolmen
+dolmenk
 dolphin
 dolphinp
 dolphntr
@@ -5368,7 +5376,7 @@ elecbowl
 elecdet
 eleciq
 elecyoyo
-elecyoyo2
+elecyoyoa
 elektra
 elephfam
 elephfmb
@@ -8060,6 +8068,7 @@ grancanb
 grancanc
 grancapi
 grand8
+grand_l1
 grand_l3
 grand_l4
 grandprx
@@ -8217,6 +8226,7 @@ gtmr
 gtmr2
 gtmr2a
 gtmr2u
+gtmr2ua
 gtmra
 gtmrb
 gtmre
@@ -8256,6 +8266,7 @@ gtsers3
 gtsers4
 gtsers5
 gtsers7
+gtsers7a
 gtsers8
 gtsers8a
 gtsers9
@@ -8319,6 +8330,7 @@ gunfrontj
 gungunad
 gunhard
 gunhohki
+gunkids
 gunlock
 gunlocko
 gunman
@@ -8915,6 +8927,7 @@ hp700_92
 hp7596a
 hp95lx
 hp9816
+hp9816a
 hp9835a
 hp9835b
 hp9845a
@@ -10864,6 +10877,7 @@ jewelcm
 jgakuen
 jgakuen1
 jigkmgri
+jigkmgria
 jin
 jingbell
 jingbella
@@ -11231,6 +11245,7 @@ kidnap
 kidniki
 kidnikib
 kidnikiu
+kidsupstar
 kikaioh
 kikcubic
 kikcubicb
@@ -11435,8 +11450,8 @@ kpv106
 kpython
 kpython2
 kram
-kram2
-kram3
+krama
+krame
 kramermc
 krokha
 kron180
@@ -11516,7 +11531,7 @@ ladyluck
 ladylukt
 ladymakr
 ladymstr
-ladymstr2
+ladymstra
 ladyshot
 ladyshota
 lafootb
@@ -11546,6 +11561,7 @@ lapbylap
 laperla
 laperlag
 larana
+larana2
 laser
 laser2k1
 laserbas
@@ -11733,6 +11749,7 @@ liberateb
 liberatr
 liberatrp
 liblrabl
+librie
 lifefrce
 lifefrcej
 lightbr
@@ -11759,13 +11776,13 @@ livequiz
 lizard
 lizwiz
 lkage
+lkagea
 lkageb
-lkageb2
-lkageb3
-lkageb4
+lkagebl1
+lkagebl2
+lkagebl3
+lkagebl4
 lkagem
-lkageo
-lkageo2
 ll3
 llander
 llander1
@@ -11908,7 +11925,9 @@ lsasquad
 lsrcu_l2
 ltcasin2
 ltcasin2a
+ltcasin2b
 ltcasino
+ltcasinoa
 ltswords
 ltv_naru
 ltv_tam
@@ -19519,6 +19538,7 @@ maddonna
 maddonnab
 madgear
 madgearj
+madmoney2
 madmotor
 madrace
 madshark
@@ -19761,6 +19781,7 @@ matchem
 matchemg
 matchit
 matchit2
+matchitb
 matchme
 matchnum
 mathmagi
@@ -20737,6 +20758,8 @@ mspacmanbi
 mspacmanblt
 mspacmanblt2
 mspacmancr
+mspacmane
+mspacmane2
 mspacmanhnc
 mspacmanlai
 mspacmat
@@ -20944,6 +20967,7 @@ mwarr
 mwcbaseb
 mwcfootb
 mx2178
+mx3210
 mx5000
 my1stddr
 myac220
@@ -21597,7 +21621,7 @@ othunderj
 othunderjsc
 othundero
 othunderu
-othunderuo
+othunderua
 otomedius
 otonano
 otrail
@@ -21688,6 +21712,7 @@ pacmania
 pacmaniaj
 pacmaniao
 pacmanjpm
+pacmanmr
 pacmanpe
 pacmanso
 pacmansp
@@ -21970,11 +21995,13 @@ pclub2v3
 pclub2wb
 pclubj
 pclubjv2
+pclubjv3
 pclubjv4
 pclubjv5
 pclubol
 pclubor
 pclubpok
+pclubyo
 pclubyo2
 pclubys
 pclubysa
@@ -23002,6 +23029,7 @@ pleiadbl
 pleiadce
 pleiads
 pleiadsb2
+pleiadsgmp
 pleiadsi
 pleiadsia
 pleiadsn
@@ -24281,6 +24309,7 @@ reelrock
 reelrockq
 reflexcrd
 regence
+regency
 regulus
 reguluso
 regulusu
@@ -24358,6 +24387,8 @@ rfjett
 rfjetu
 rflshdlx
 rfsantafeg
+rfsantafem
+rfsantafema
 rgum
 rhhc152
 rhunting
@@ -24393,7 +24424,7 @@ ringdestb
 ringdesth
 ringdstd
 ringfgt
-ringfgt2
+ringfgta
 ringking
 ringking2
 ringking3
@@ -24854,6 +24885,7 @@ saladue
 saladuea
 salamand
 salamandj
+salamandt
 salmankt
 salmndr2
 salmndr2a
@@ -31044,6 +31076,7 @@ shippumd
 shiryu2
 shisen
 shisen2
+shisena
 shngmtkb
 shock
 shocking
@@ -31117,6 +31150,7 @@ shufshot135
 shufshot137
 shufshot138
 shufshot139
+shun
 shuriboy
 shuttlei
 shuuz
@@ -31353,6 +31387,7 @@ sltblgtk
 sltblgtka
 sltpcycl
 sltpstep
+sluster2
 slvrwolf
 slyspy
 slyspy2
@@ -32640,6 +32675,7 @@ sstrkfgta
 ssvc_a26
 ssvc_a42
 ssvc_b26
+ssvc_e40
 ssystem3
 ssystem4
 st1700h
@@ -32984,6 +33020,7 @@ supergm3
 supergs
 supergx
 superinv
+superkds
 superman
 supermanj
 supermanu
@@ -33289,6 +33326,8 @@ tascr30b
 tascr30g
 taspinv
 tatacot
+tatrain
+tatraina
 tattack
 tattass
 tattassa
@@ -34307,7 +34346,7 @@ ts_lx4
 ts_lx5
 ts_pa1
 tsamurai
-tsamurai2
+tsamuraia
 tsamuraih
 tsarevna
 tsarevnaa
@@ -35287,6 +35326,7 @@ virnba
 virnbao
 virnbap
 virnbapa
+virtbb
 virusa
 virusb
 virusc
@@ -36014,6 +36054,7 @@ wyvernf0a
 wyvernwg
 wyvernwga
 wzwaysll
+x180
 x180ii
 x2222
 x2222o
@@ -36104,6 +36145,7 @@ xmvsfur2
 xorworld
 xplan
 xrally
+xreel
 xsandos
 xsedae
 xsleena
@@ -36243,6 +36285,7 @@ zingzipbl
 zipzap
 zipzapa
 zira
+zircon2
 znpwfv
 znpwfvt
 zoar
