update auto/man created ini files (mame0271)

--- a/00-databases-00/sorted_info_creation/0XXX/90º.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/90º.ini
@@ -24,6 +24,7 @@
 1945kiii
 1945kiiin
 1945kiiio
+1945kiiipt
 19in1
 19xx
 19xxa
@@ -249,6 +250,7 @@ atlantis2
 atlantisb
 atombjt
 attckufo
+au
 avefenix
 avefenixl
 avefenixrf
@@ -1284,6 +1286,7 @@ gunsmokeua
 gunsmokeub
 gunsmokeuc
 gutangtn
+gutangtns
 guttangt
 guttangts3
 guwange
@@ -1314,6 +1317,7 @@ hangly3
 harem
 hbarrel
 hbarrelu
+hbarrelua
 headoni
 headonn
 heartatk
@@ -1568,6 +1572,7 @@ kuhga
 kyros
 kyrosj
 labyrunr
+labyrunrf
 labyrunrk
 ladybug
 ladybugb
@@ -1623,6 +1628,7 @@ losttomb
 losttombh
 loverboy
 lrescue
+lrescueabl
 lrescuem
 lrescuem2
 lsasquad
@@ -1733,6 +1739,7 @@ minefld
 minefldfe
 mirax
 miraxa
+miraxb
 misncrft
 misncrfta
 mjleague
@@ -1756,7 +1763,7 @@ montecar
 monymony
 monymony2
 monzagp
-monzagpb
+monzagpa
 moonal2
 moonal2b
 moonaln
@@ -1953,7 +1960,6 @@ ozon1
 p911
 p9112
 p911ac
-p911ea
 p911ed
 p911j
 p911k
@@ -2233,6 +2239,7 @@ raiden2eub
 raiden2eup
 raiden2f
 raiden2g
+raiden2gb
 raiden2hk
 raiden2i
 raiden2j
@@ -2340,6 +2347,7 @@ retofinvb
 retofinvb1
 retofinvb2
 retofinvb3
+retofinvbv
 revenger
 revngr84
 rfjet
@@ -2691,6 +2699,7 @@ spinkick
 spinner
 sprglbpg
 sprglobp
+sprglobp2
 springer
 sprpuzzle
 spyhunt
@@ -2865,7 +2874,7 @@ tempest2
 tempest3
 temptube
 tenkomor
-tenkomorja
+tenkomorja1
 tenspot
 terracre
 terracrea
@@ -3028,6 +3037,7 @@ tvgm8080
 twinbee
 twinbeeb
 twincobr
+twincobrm
 twincobru
 twineag2
 twineagl
