--- a/00-databases-00/sorted_info_creation/0XXX/good.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/good.ini
@@ -35,6 +35,7 @@
 1945kiii
 1945kiiin
 1945kiiio
+1945kiiipt
 19xx
 19xxa
 19xxar1
@@ -56,6 +57,7 @@
 20pacgalr3
 20pacgalr4
 25pacmano
+265games
 280zzzap
 30test
 39in1
@@ -289,6 +291,7 @@ airwolfa
 ajax
 ajaxj
 akamaru
+akamj
 akazukin
 akiss
 akkaarrh
@@ -567,6 +570,7 @@ aracnis
 arb
 arbalest
 arbv2
+arcade10
 arcadecl
 arcadia
 arcadian
@@ -758,6 +762,7 @@ attckufo
 atworld
 atworldd1
 atworlde1
+au
 aurail
 aurail1
 aurail1d
@@ -768,6 +773,7 @@ aussieby
 autmoon
 autorace
 avalnche
+avcc
 avefenix
 avefenixl
 avefenixrf
@@ -848,6 +854,7 @@ ballbros
 balonfgt
 baluba
 bambball
+ban_krrj
 bananadr
 banbam
 bandido
@@ -862,6 +869,7 @@ baracuda
 baraduke
 barata
 barek2ch
+barek2mb
 barek3mb
 barekch
 barline
@@ -1267,6 +1275,7 @@ bmiidx8
 bmiidxc2
 bmiidxs
 bmiidxsa
+bmjr
 bmsafari
 bmsoccer
 bmxstunts
@@ -1684,6 +1693,7 @@ caractn
 caractn2
 carb2002
 carb2003
+carbeena
 cardline
 carhntds
 carjmbre
@@ -1739,6 +1749,7 @@ cb3a
 cb3b
 cb3d
 cb3e
+cb3g
 cbaj
 cball
 cbasebal
@@ -1851,6 +1862,7 @@ centiped1
 centiped2
 centiped3
 centipedj
+centurion
 cerberus
 cexpert
 cexplore
@@ -2031,7 +2043,12 @@ citybombj
 citycon
 citycona
 citylove
-ckmaster
+cjddz
+cjddz215cn
+cjddz217cn
+cjddzlf
+cjddzp
+cjtljp
 ckong
 ckongalc
 ckongdks
@@ -2050,6 +2067,8 @@ ckongpt2ss
 ckongs
 clapapa
 clapapa2
+classic
+classica
 classice
 classice1
 classice2
@@ -2347,10 +2366,14 @@ cottonjad
 cottonjd
 cottonu
 cottonud
+cougar
 countdwn
 countrunb
 countrunb3
 countryc
+couple
+couplei
+couplep
 cp2000
 cp400
 cp400c2
@@ -2493,6 +2516,10 @@ crzrally
 crzrallya
 crzrallyg
 crzrallyrf
+crzybugs
+crzybugs103jp
+crzybugs200us
+crzybugs202us
 csc
 csce
 cscet
@@ -2527,6 +2554,7 @@ csweetht
 ct2k3sa
 ct2k3sp
 ct486
+ct65
 ctainv
 cterrani
 cthd2003
@@ -2761,6 +2789,7 @@ dblpointd
 dbreed
 dbreedjm72
 dbreedm72
+dbridgec
 dbz
 dbz2
 dbza
@@ -2841,6 +2870,7 @@ ddr2mc2
 ddr2ml
 ddr2mla
 ddr2mlb
+ddr33v
 ddra
 ddragon
 ddragon2
@@ -3009,6 +3039,7 @@ dgun2500
 dgun2573
 dgun2573a
 dgun2869
+dgun2953
 dgun2959
 dgun851
 dgun853
@@ -3019,7 +3050,10 @@ dharmaj
 dharmak
 diablo68
 diablo68a
+diablo68b
 diamond
+diamond2
+diamrun
 dicegame
 didakm91
 didakm92
@@ -3030,6 +3064,7 @@ diehard
 dietgo
 dietgoe
 dietgoea
+dietgoeb
 dietgoj
 dietgou
 digdug
@@ -3149,6 +3184,10 @@ dockman
 dockmanb
 dockmanc
 dodgecty
+dodgectya
+dodgectyba
+dodgectybb
+dodgectybc
 dodgem
 dodgeman
 dodghero
@@ -3216,6 +3255,7 @@ dotriman
 dotron
 dotrona
 dotrone
+dotronep
 doubledr
 douni
 dowild
@@ -3227,6 +3267,7 @@ dpc100
 dpc180
 dpc200
 dpc200e
+dphh8630
 dplay
 dpoker
 dps1
@@ -3306,6 +3347,7 @@ drtomy
 drtoppel
 drtoppelj
 drtoppelu
+drumsups
 dsaber
 dsabera
 dsaberj
@@ -3480,6 +3522,7 @@ ekusera
 elandore
 elecdet
 eleciq
+electrio
 electron
 electron64
 electronsp
@@ -3510,6 +3553,7 @@ embargo
 emeralda
 emeraldaj
 emeraldaja
+emerclp
 emirage
 emma2
 empcity
@@ -3543,8 +3587,13 @@ epacman2
 epacman2r
 epc
 epo_guru
+epo_mms
+epo_mmsp
+epo_quiz
 epo_sdb
 epo_tfp2
+epo_tp2p
+epo_tp2s
 eprom
 eprom2
 equites
@@ -3868,9 +3917,7 @@ fcockt_9
 fcombat
 fcpocket
 fcrash
-fdes2000
 fdes2000d
-fdes2100
 fdes2100d
 fdes2100da
 fdes2265
@@ -3894,6 +3941,7 @@ feagv9
 feagv9a
 feagv9b
 feagv9c
+fearless
 feas
 feasbu
 feasbua
@@ -3910,6 +3958,7 @@ felega3
 fellow
 fengyunh
 fenixn
+fever13
 feversoc
 feversos
 fex68k
@@ -3923,11 +3972,11 @@ fex68km3b
 fex68km4
 fexcel
 fexcel12
-fexcel124
+fexcel12a
 fexcela
 fexceld
 fexcelp
-fexcelpb
+fexcelpa
 fexcelv
 ffantasy
 ffantasya
@@ -3972,7 +4021,7 @@ fghthistuc
 fgoal
 fgoala
 fgtlayer
-fgtlayerj
+fgtlayerja
 fhawk
 fhawkj
 fhboxers
@@ -4216,6 +4265,8 @@ frpwr_l2
 frpwr_l6
 frpwr_t6
 fruitbun
+fruitpar
+fruitpar206us
 fruitpc
 fruitstb
 fruitstba
@@ -4326,6 +4377,7 @@ gaiapolsj
 gaiapolsu
 gaiden
 gakupara
+gakupara102
 gakusai
 gakusai2
 gakusaia
@@ -4446,7 +4498,7 @@ galxwars2
 galxwarst
 galxwarst2
 gamate
-gambit
+gambitv
 gambler
 gameboy
 gamecom
@@ -4571,6 +4623,7 @@ gegege
 geimulti
 geisha
 gekiretu
+gekiretup
 gekiridn
 gekiridnj
 gekisha
@@ -4671,6 +4724,7 @@ gjackpot
 gjspace
 gjungler
 gk2000
+gk2100
 gladiatr
 glasgow
 glass
@@ -4894,6 +4948,7 @@ gradiusb
 grainbow
 grainbowk
 grally
+granada
 grand_l1
 grand_l3
 grand_l4
@@ -5170,6 +5225,7 @@ gunsmokeuc
 gururin
 gussun
 gutangtn
+gutangtns
 guts
 gutsn
 guttangt
@@ -5315,6 +5371,7 @@ hb75p
 hb8000
 hbarrel
 hbarrelu
+hbarrelua
 hbf1
 hbf1ii
 hbf1xd
@@ -5553,7 +5610,10 @@ hp9816a
 hp9825a
 hp9825b
 hp9825t
+hp9826a
 hp9831
+hp9836a
+hp9836c
 hp9845b
 hp9845b_de
 hp9845c
@@ -5575,6 +5635,7 @@ hsf2a
 hsf2d
 hsf2j
 hsf2j1
+hsf2j2
 hstennis
 hstennis10
 ht68k
@@ -5893,6 +5954,7 @@ itvg48
 itvg49
 itvphone
 ivant
+ivanto
 ivelultr
 ixion
 ixl2000
@@ -6136,6 +6198,12 @@ jantouki
 janyoup2
 janyuki
 jb3000
+jbell
+jbell133i
+jbell141ue
+jbell153ue
+jbell155ue
+jbell157us
 jchan
 jchan2
 jchana
@@ -6164,11 +6232,6 @@ jgakuen1
 jigkmgri
 jigkmgria
 jin
-jingbell
-jingbella
-jingbellb
-jingbellc
-jingbelli
 jingling
 jitsupro
 jituroku
@@ -6182,6 +6245,8 @@ jjsquawkb
 jjsquawkb2
 jjsquawko
 jjstrip
+jking02
+jking103a
 jl2050
 jleague
 jleagueo
@@ -6355,7 +6420,7 @@ jwildb52h
 jyangoku
 jzth
 k28
-k28m2
+k28o
 kabukikl
 kabukiz
 kabukizj
@@ -6402,6 +6467,8 @@ karnov
 karnova
 karnovj
 karnovr
+kartduel
+kartduelja
 kas89
 kattobas
 kaypro10
@@ -6417,6 +6484,8 @@ kbashp
 kbh
 kbilly
 kblades
+kblitz
+kblitza
 kbm
 kbm2nd
 kbm3rd
@@ -6770,6 +6839,7 @@ kyukaidko
 kyustrkr
 kzaurus
 labyrunr
+labyrunrf
 labyrunrk
 lacrazyc
 ladybug
@@ -6965,8 +7035,17 @@ lhaunt_8
 lhb
 lhb2
 lhbv33c
+lhdmg
+lhdmgp
+lhzb
 lhzb2
 lhzb2a
+lhzb3
+lhzb3106c5m
+lhzb3sjb
+lhzb4
+lhzb4dhb
+lhzba
 liberate
 liberateb
 liberatr
@@ -6983,6 +7062,7 @@ lilprofo
 lilprofoa
 lilprofob
 lindbios
+link
 linkypip
 liquidk
 liquidku
@@ -7011,6 +7091,7 @@ lluck3x3
 lluck4x1
 lnc
 lnsy1392
+lnux4004
 lockon
 lockonc
 lockonph
@@ -7066,6 +7147,7 @@ lovehous
 loverboy
 lpadv
 lrescue
+lrescueabl
 lrescuem
 lrescuem2
 lresort
@@ -7076,6 +7158,7 @@ ltcasin2a
 ltcasin2b
 ltcasino
 ltcasinoa
+lthyp
 ltmpbp
 ltmpm
 ltswords
@@ -7098,6 +7181,7 @@ lucky8h
 lucky8i
 lucky8k
 lucky8l
+lucky8m
 lucky_l1
 luckybal
 luckybala
@@ -7212,6 +7296,7 @@ machomou
 macii
 maciici
 maciicx
+maciifx
 maciihmu
 maciisi
 maciivi
@@ -7226,13 +7311,17 @@ maclc520
 maclc550
 maclc575
 maclc580
+macpb100
 macplus
+macprtb
 macqd605
 macqd610
 macqd630
 macqd650
 macqd700
 macqd800
+macqd900
+macqd950
 macross
 macross2
 macross2g
@@ -7382,6 +7471,7 @@ marble4
 marble5
 marblmd2
 marc101
+marc250
 marineb
 mariner
 mario
@@ -7416,6 +7506,7 @@ mastboyo
 mastboyoa
 mastboyob
 mastboyoc
+master
 masterw
 masterwj
 masterwu
@@ -7423,6 +7514,8 @@ mastfury
 mastkin
 mastmind
 match98
+matchem
+matchemg
 matchit
 matchit2
 matchitb
@@ -7516,6 +7609,7 @@ mc_tv200
 mcatadv
 mcatadvj
 mcb216
+mcg85
 mchampdx
 mchampdxa
 mchampdxb
@@ -7535,11 +7629,15 @@ mdndclab
 mdrawpkr
 mdrawpkra
 mdt60
+mdtvp1j
+mdtvp2j
+mdtvp3j
 mechatt
 mechattj
 mechattu
 mechattu1
 medlanes
+mega10k
 mega4
 mega4a
 megablst
@@ -7596,6 +7694,7 @@ megat4stg
 megat4te
 megat4tea
 megat5
+megat5a
 megat5g
 megat5nj
 megat5t
@@ -7630,11 +7729,13 @@ mephisto
 mephisto1x
 mephisto2
 mephisto2a
-mephisto2e
+mephisto2b
 mephisto3
 mephisto3a
 mephisto3b
 mephisto3c
+mephistoe2
+mephistoe2a
 mephistoj
 mercenario
 mercs
@@ -7650,6 +7751,7 @@ merlinmm
 mermaid
 metafox
 metalb
+metalba
 metalbj
 metamrph
 metamrpha
@@ -7671,6 +7773,7 @@ metlsavr
 metmqstr
 metrocrs
 metrocrsa
+mex68kecb
 mexico86
 mf_achas
 mf_bdash
@@ -7706,6 +7809,7 @@ mgcldtex
 mgcrystl
 mgcrystlj
 mgcrystlo
+mgcs3
 mgdh
 mgdha
 mgion
@@ -7714,6 +7818,8 @@ mgnumber
 mgolf
 mgprem11
 mgt20in1
+mgzz
+mgzz100cn
 mhavoc
 mhavoc2
 mhavocp
@@ -7785,9 +7891,11 @@ miniscco
 minitel2
 minivadr
 minspace
+mir7hg
 mirage
 mirax
 miraxa
+miraxb
 mirco21
 mirninja
 mirninjaa
@@ -7796,10 +7904,14 @@ misdraw
 missb2
 missile
 missile1
+missile1a
 missile2
+missile2a
 missilea
+missilebl
 missmw96
 missw02
+missw02d
 missw96
 missw96a
 missw96b
@@ -7887,6 +7999,7 @@ mjyuugi
 mjyuugia
 mjzoomin
 mk
+mk12
 mk14
 mk14vdu
 mk1forth
@@ -7947,7 +8060,7 @@ mlg30
 mlg30_2
 mltiwars
 mm1
-mm1b
+mm1a
 mm1m4
 mm1m4g
 mm1m6
@@ -8097,6 +8210,7 @@ mortalr
 mosaic
 mosaica
 mosaicf2
+mosdraw
 moshougi
 motofren
 motofrenft
@@ -8151,8 +8265,10 @@ mpchoicea
 mpf1
 mpf1_88
 mpf1b
+mpf1p
 mplanets
 mplanetsuk
+mps65
 mpt02
 mpt02h
 mpt05
@@ -8170,7 +8286,7 @@ mrdofix
 mrdot
 mrdoy
 mrdrillr
-mrdrillrj
+mrdrillrja2
 mrdrilr2
 mrdrilr2j
 mrdrilr2u
@@ -8200,6 +8316,7 @@ ms1600
 ms4plus
 ms5pcb
 ms5plus
+ms68k
 msbingo
 mschamp
 mschamps
@@ -8303,12 +8420,14 @@ mstadium
 msthawk
 mstworld
 mstworld2
+msupstar
 msword
 mswordj
 mswordr1
 mswordu
 mt65
 mt6809
+mt80z
 mtc9016
 mtchxl6k
 mtchxl6ko
@@ -8413,6 +8532,7 @@ mx15
 mx1600
 mx5000
 mx64
+mxsqy
 myangel
 myangel2
 myangel3
@@ -8780,6 +8900,7 @@ nwarru
 nwarrud
 nws3260
 nws3410
+nws3720
 nyanpani
 nycaptor
 nyjoker
@@ -8791,6 +8912,8 @@ nzeroteama
 nzeroteamb
 ob68k1a
 oc2000
+oceanpar
+oceanpar101us
 odyssey2
 odyssey3
 oedfight
@@ -8972,9 +9095,10 @@ ozon1
 p2000m
 p2000t
 p47
+p47a
 p47aces
 p47acesa
-p47b
+p47bl
 p47j
 p47je
 p500
@@ -9243,7 +9367,9 @@ pce
 pce220
 pcega
 pcg815
+pcheckers
 pcherc
+pchess
 pcipc
 pcipcs7
 pcktgal
@@ -9905,6 +10031,7 @@ phantomp
 phantpay
 phasor
 phc2
+phc20
 phc23
 phc23jb
 phc25
@@ -10163,6 +10290,7 @@ pmd852a
 pmd852b
 pmd853
 pmi80
+pmicrodx
 pmpoker
 pn8800
 pnickj
@@ -10181,6 +10309,7 @@ poizone
 pokechmp
 pokechmpa
 pokemini
+poker21
 poker41
 poker91
 pokeresp
@@ -10299,6 +10428,8 @@ popn8
 popnanm
 popnanm2
 popnanm2a
+popnanm2ja
+popnanm2jaa
 popnanma
 popnmt
 popnmt2
@@ -10341,7 +10472,7 @@ poundforj
 poundforu
 pow
 powa
-powb
+powbl
 powerbal
 powerbals
 powercrd
@@ -10367,6 +10498,7 @@ ppd
 ppgc200g
 ppj
 ppking
+pplus
 ppmast93
 ppp
 ppp11
@@ -10647,6 +10779,7 @@ ql_es
 ql_gr
 ql_it
 ql_us
+qlgs
 qmhayaku
 qndream
 qnileb
@@ -10831,6 +10964,7 @@ radrj
 radru
 raflesia
 raflesiau
+ragc153
 ragnagrd
 ragtime
 ragtimea
@@ -10848,6 +10982,7 @@ raiden2eub
 raiden2eup
 raiden2f
 raiden2g
+raiden2gb
 raiden2hk
 raiden2i
 raiden2j
@@ -11129,9 +11264,11 @@ retofinvb
 retofinvb1
 retofinvb2
 retofinvb3
+retofinvbv
 retrsama
 retrsamb
 reversic
+revlatns
 revngr84
 revx
 revxp5
@@ -11146,6 +11283,7 @@ rfjets
 rfjetsa
 rfjett
 rfjetu
+rhhc152
 ribbit
 ribbitj
 ridgera2
@@ -11212,6 +11350,8 @@ rm380z34e
 rm380zf
 rm380zfhrg
 rm380zhrg
+rm480z
+rm480za
 rmancp2j
 rmgoldyh
 rmhaihai
@@ -11576,6 +11716,8 @@ sanjeon
 santaka2
 sapi1
 sapizps2
+sapphire
+sapphire2
 sarge
 sarukani
 sasissu
@@ -11603,6 +11745,7 @@ sb180
 sb2003
 sb2003a
 sb2m600b
+sbackgc
 sbagman
 sbagman2
 sbagmani
@@ -11716,9 +11859,9 @@ scorpionmc
 scorpiontb
 scotrsht
 scp300f
+scpchess
+scpchessa
 scprof
-scptchess
-scptchessa
 scrabble
 scrabbled
 scrabbleo
@@ -11771,6 +11914,7 @@ sdk80
 sdk85
 sdk86
 sdmg2
+sdmg2a
 sdodgeb
 sdtennis
 sdtor
@@ -12412,6 +12556,7 @@ sloco93a
 slotsnl
 slotunbl
 slqz2
+slqz3
 slrasslt
 slrassltj
 slrassltj1
@@ -12586,9 +12731,9 @@ sotsugyo
 sotsugyok
 soukobdx
 soulclbr
-soulclbra
 soulclbrab
-soulclbrja
+soulclbrac
+soulclbrja2
 soulclbrjb
 soulclbrjc
 soulclbrub
@@ -12789,10 +12934,16 @@ spinveti
 spirit76
 spitboss
 spk100
+spk102ua
 spk114it
 spk115it
 spk116it
 spk116itmx
+spk200ua
+spk201ua
+spk203us
+spk205us
+spk306us
 spkrform
 splasfgt
 splash
@@ -12885,6 +13036,7 @@ srmp6
 srmp7
 srmvs
 srmvsa
+sroyal
 srumbler
 srumbler2
 srumbler3
@@ -13126,6 +13278,7 @@ streetsm
 streetsm1
 streetsmj
 streetsmw
+streetsmwbl
 strfbomb
 strfight
 strgchmp
@@ -13219,6 +13372,7 @@ supergb2
 supergm3
 supergs
 superinv
+superkds
 superman
 supermanj
 supermanu
@@ -13238,7 +13392,9 @@ supinvsion
 suplup
 supmodel
 supmodl2
+supra
 suprball
+supreme
 supremo
 suprglob
 suprgolf
@@ -13418,6 +13574,7 @@ tadpc200b
 tagteam
 tahjong
 taikeegr
+taikodp
 tail2nos
 tail2nosa
 tailg
@@ -13425,6 +13582,8 @@ taitons1
 taitons2
 taiwanmb
 tak_geig
+tak_gin
+tak_hamr
 takefive
 takeoff
 talbot
@@ -13465,6 +13624,7 @@ targc
 targeth
 targeth10
 targetha
+tarzanb
 tarzanc
 tascr30
 tascr30a
@@ -13590,7 +13750,7 @@ tekkenbs
 tekkencw
 tekkenjb
 tektagt
-tektagtc1
+tektagtc1a
 tektagtjc1
 tektagtub
 tektagtuc1
@@ -13615,7 +13775,7 @@ tenkaibb
 tenkaicb
 tenkaie
 tenkomor
-tenkomorja
+tenkomorja1
 tenthdeg
 tenup
 teqsun
@@ -13939,6 +14099,7 @@ tmnt2
 tmnt22pu
 tmnt24pu
 tmnt2a
+tmnt2o
 tmnt2pj
 tmnt2po
 tmnta
@@ -14025,6 +14186,7 @@ tomcat
 tomcatsw
 tomcpin
 tomplc
+tomthr
 tondemo
 tonton
 tontonb
@@ -14145,6 +14307,8 @@ triomphe
 triothep
 triothepj
 tripdraw
+tripfev
+tripfev107us
 triplep
 triplepa
 triplew1
@@ -14154,6 +14318,7 @@ triplfunk
 triplhnt
 tripool
 tripoola
+tripslot
 trisport
 triviabb
 triviaes
@@ -14259,6 +14424,7 @@ ts2ua
 tsamurai
 tsamuraia
 tsamuraih
+tschess
 tsconf
 tsddragon
 tsf2010
@@ -14355,6 +14521,7 @@ tvbg6a
 tvbg6b
 tvboy
 tvboyii
+tvboyn
 tvc4000
 tvg2000
 tvgame
@@ -14430,6 +14597,7 @@ ucytokyu
 uecology
 ufo21
 ufo800
+ufoalac
 ufombs
 ufomini
 ufosensi
@@ -14450,6 +14618,7 @@ ultrchmp
 ultrchmph
 umanclub
 umipoker
+umipokera
 umk3
 umk3r10
 umk3r11
@@ -14509,7 +14678,6 @@ ut88
 ut88mini
 utoukond
 utrn1024
-uvc
 v1050
 v200
 v364
@@ -15007,7 +15175,6 @@ whp
 wiggie
 wildbill
 wildfang
-wildfangh
 wildfangs
 wildfire
 wildone
@@ -15077,6 +15244,7 @@ wldangel
 wldarrow
 wldcourt
 wldcp_l1
+wldgunsb
 wldsoctv
 wldwitch
 wldwitcha
@@ -15128,6 +15296,7 @@ wotwc
 wow
 wowg
 wownfant
+wownfanta
 wpksocv2
 wrally
 wrally2
@@ -15280,6 +15449,7 @@ xmvsfj
 xmvsfjr1
 xmvsfjr2
 xmvsfjr3
+xmvsfjr4
 xmvsfr1
 xmvsfu
 xmvsfu1d
@@ -15391,6 +15561,7 @@ zerowing1
 zerowingw
 zerozone
 zexall
+zhongguo
 zigzagb
 zigzagb2
 zijini
@@ -15422,6 +15593,7 @@ zookeep2
 zookeep3
 zookeepbl
 zoom909
+zoomer
 zooo
 zrt80
 zsbc3
