--- a/00-databases-00/sorted_info_creation/0XXX/lightgun.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/lightgun.ini
@@ -4,6 +4,7 @@
 32x_scd
 32xe
 32xj
+500gp
 a1200xl
 a130xe
 a2600
@@ -21,9 +22,20 @@ a800pal
 a800xe
 a800xl
 a800xlp
+ace100
+ace1000
 aiwamcd
+aking
+albert
 alg_bios
+am100
+am64
+aplarail
 aplatoon
+apple2
+apple2jp
+apple2p
+aquarush
 area51
 area51a
 area51mx
@@ -44,6 +56,7 @@ b256hp
 b500
 bang
 bangj
+basis108
 bbh
 bbh2sp
 bbh2spa
@@ -94,9 +107,11 @@ c64c
 c64c_es
 c64c_se
 c64cp
+c64dx
 c64g
 c64gs
 c64p
+c65
 carnevil
 carnevil1
 carnking
@@ -131,6 +146,7 @@ combat
 confmiss
 copera
 cracksht
+craft2p
 crimep2
 crimep2_11
 crimepat
@@ -139,6 +155,12 @@ crimepat_12
 crimepat_14
 critcrsh
 crossbow
+crszone
+crszonev2a
+crszonev3a
+crszonev3b
+crszonev3b2
+crszonev4a
 cryptklr
 cubo
 cyclshtg
@@ -157,6 +179,9 @@ dendy
 dendy2
 desertgu
 dimtouch
+dodo
+downhill
+downhillu
 dpb7000
 dragngun
 dragngunj
@@ -173,7 +198,11 @@ eggventr7
 eggventr8
 eggventra
 eggventrd
+ehrgeiz
+ehrgeizja
+ehrgeizua
 eldoralg
+elppa
 evilngt
 falcon30
 falcon40
@@ -189,6 +218,11 @@ fastdraw
 fastdraw_130
 fctitler
 fds
+fgtlayer
+fgtlayerja
+finfurl
+finfurl2
+finfurl2j
 fstation
 funcube
 funcube2
@@ -236,12 +270,15 @@ gunchamp
 gunchamps
 gunhard
 gunmania
+gunwars
+gunwarsa
 hammer
 haremchl
 hellngt
 hidctch3
 hitnmiss
 hitnmiss2
+hkc8800a
 hogalley
 hotd
 hotd2
@@ -260,19 +297,25 @@ invasnab4
 iq501
 iq502
 iteagle
+ivelultr
 jdredd
 jdreddb
 jnero
 jorn720
 jpark3
 jpark3u
+kaiunqz
+kartduel
+kartduelja
 kdeadeye
 kyhatonu
+laser2c
 laseract
 laseractj
 lasstixx
 lastbh
 lastbh_006
+lbgrande
 le2
 le2j
 le2u
@@ -324,12 +367,15 @@ magimaskb
 magtcha5
 magtcha5a
 magtouch
+mahg156
 maletmad
 marvice
 marvice100hz
 maxf_102
 maxf_ng
 maxforce
+maxxi
+mdhorse
 mechatt
 mechattj
 mechattu
@@ -383,6 +429,7 @@ megat6
 megat7e
 mgnumber
 mgprem11
+microeng
 mini2440
 mo5
 mo5e
@@ -400,6 +447,13 @@ monopoly3
 monopoly4
 monopolyd
 monspdr
+motoxgo
+motoxgov1a
+motoxgov1a2
+motoxgov2a
+motoxgov2a2
+mrdrillr
+mrdrillrja2
 msm3
 mtchxl5k
 mtchxl5ko
@@ -444,12 +498,14 @@ p500p
 p911
 p9112
 p911ac
-p911ea
 p911ed
 p911j
 p911k
 p911kc
 p911ud
+pacapp
+pacapp2
+pacappsp
 palmiii
 palmiiic
 palmm100
@@ -461,6 +517,9 @@ palmpro
 palmv
 palmvx
 palmz22
+panicprk
+panicprkj
+panicprkj2
 partygrs
 partygrsa
 partygrsb
@@ -514,6 +573,8 @@ policetr13
 policetr13a
 policetr13b
 ppsatan
+prav82
+prav8m
 princ
 pro128
 psion5mx
@@ -527,9 +588,14 @@ ptblank3
 ptblanka
 qnilemax
 quickjac
+raceon
+raceonj
 rapidfir
 rapidfira
 rapidfire
+rapidrvr
+rapidrvrp
+rapidrvrv2c
 rchase
 rchasej
 rchasejb
@@ -578,6 +644,15 @@ smssdisp
 snes
 snespal
 snlad
+soulclbr
+soulclbrab
+soulclbrac
+soulclbrja2
+soulclbrjb
+soulclbrjc
+soulclbrub
+soulclbruc
+space84
 spacepir
 spacepir_14
 specfrce
@@ -604,6 +679,10 @@ streetg2r5
 streetgr3
 stvboy
 swclone
+sws2000
+sws2001
+sws98
+sws99
 sx64
 sx64p
 t9000
@@ -611,6 +690,25 @@ targeth
 targeth10
 targetha
 tatacot
+technodr
+tekken3
+tekken3a
+tekken3b
+tekken3c
+tekken3d
+tekken3ja
+tekken3je1
+tekken3ua
+tekken3ud
+tektagt
+tektagtc1a
+tektagtja3
+tektagtjb
+tektagtjc1
+tektagtub
+tektagtuc1
+tenkomor
+tenkomorja1
 terabrst
 terabrsta
 terabrstaa
@@ -666,16 +764,19 @@ to8
 to8d
 to9
 to9p
+tomshoot
 totlvica
 totlvice
 totlvicj
 totlvicu
+toukon3
 trivialp
 trivialpd
 trivialpo
 trivrus
 trophyh
 trophyht
+truckk
 tt030
 tt030_de
 tt030_fr
@@ -685,9 +786,14 @@ turkhunt
 tutstomb
 tvboy
 tvboyii
+tvboyn
+ujlnow
 undrfire
 undrfirej
 undrfireu
+uniap2en
+uniap2pt
+uniap2ti
 uzebox
 v364
 vcop
@@ -704,6 +810,7 @@ virtpool
 visor
 vsfdf
 vsgshoe
+wcombatu
 whodunit
 whodunit8
 wmega
@@ -724,5 +831,6 @@ zeropntj
 zombraid
 zombraidp
 zombraidpj
+zoomer
 zortonbr
 zortonbr_100
