revisited manual update by DTEAM (mame0271)

--- a/00-databases-00/sorted_info_creation/0XXX/all_in1.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/all_in1.ini
@@ -2,12 +2,15 @@
 88in1joy
 ablmini
 ablpinb
+arcade10
 bittboy
 brke23p2
 cybar120
 dgun2573
+dgun2953
 dgun2959
 dnv200fs
+dphh8630
 fapocket
 fcpocket
 fordrace
@@ -28,6 +31,7 @@ lxnoddy
 m505neo
 m521neo
 majkon
+marc250
 mc_105te
 mc_110cb
 mc_138cb
@@ -66,11 +70,14 @@ pjoys30
 pjoys60
 ppgc200g
 racechl8
+ragc153
 react
 reactmd
+rhhc152
 rminitv
 sarc110
 sudopptv
+supreme
 swclone
 sy888b
 sy889
