manual update by DTEAM (mame0272)

--- a/00-databases-00/sorted_info_creation/0XXX/all_in1.ini
+++ b/00-databases-00/sorted_info_creation/0XXX/all_in1.ini
@@ -5,6 +5,8 @@ ablpinb
 arcade10
 bittboy
 brke23p2
+cmpmx10
+cmpmx11
 cybar120
 dgun2573
 dgun2953
@@ -18,6 +20,7 @@ ga888
 gamezn2
 gprnrs1
 gprnrs16
+gujtv108
 ii32in1
 ii8in1
 intact89
@@ -65,6 +68,7 @@ pdc150t
 pdc200
 pdc40t
 pdc50
+pgs268
 pjoyn50
 pjoys30
 pjoys60
